A number of changes including removing unneeded explicit boxing.unboxing, simplifying for loops (and in many cases being able to get rid of a now unused size variable), changing to use text blocks (less concatenation), changing some if/else chains to switch statements, using try-with-resources instead of finally blocks, and other improvements.