@@ -239,7 +239,6 @@ import java.util.ArrayList;
 import java.util.BitSet;
 import java.util.Date;
 import java.util.HashSet;
-import java.util.Iterator;
 import java.util.List;
 import java.util.concurrent.ConcurrentHashMap;
 
@@ -365,57 +364,54 @@ public class EDDTableFromCassandra extends EDDTable {
       String localTags = tags.substring(startOfTagsLength);
 
       // try to make the tag names as consistent, descriptive and readable as possible
-      if (localTags.equals("<addAttributes>")) tGlobalAttributes = getAttributesFromXml(xmlReader);
-      else if (localTags.equals("<dataVariable>"))
-        tDataVariables.add(getSDADVariableFromXml(xmlReader));
-      else if (localTags.equals("<accessibleTo>")) {
-      } else if (localTags.equals("</accessibleTo>")) tAccessibleTo = content;
-      else if (localTags.equals("<graphsAccessibleTo>")) {
-      } else if (localTags.equals("</graphsAccessibleTo>")) tGraphsAccessibleTo = content;
-      else if (localTags.equals("<reloadEveryNMinutes>")) {
-      } else if (localTags.equals("</reloadEveryNMinutes>"))
-        tReloadEveryNMinutes = String2.parseInt(content);
-      else if (localTags.equals("<sourceUrl>")) {
-      } else if (localTags.equals("</sourceUrl>")) tLocalSourceUrl = content;
-      else if (localTags.equals("<connectionProperty>"))
-        tConnectionProperties.add(xmlReader.attributeValue("name"));
-      else if (localTags.equals("</connectionProperty>")) tConnectionProperties.add(content);
-      else if (localTags.equals("<keyspace>")) {
-      } else if (localTags.equals("</keyspace>")) tKeyspace = content;
-      else if (localTags.equals("<tableName>")) {
-      } else if (localTags.equals("</tableName>")) tTableName = content;
-      else if (localTags.equals("<partitionKeySourceNames>")) {
-      } else if (localTags.equals("</partitionKeySourceNames>")) tPartitionKeySourceNames = content;
-      else if (localTags.equals("<clusterColumnSourceNames>")) {
-      } else if (localTags.equals("</clusterColumnSourceNames>"))
-        tClusterColumnSourceNames = content;
-      else if (localTags.equals("<indexColumnSourceNames>")) {
-      } else if (localTags.equals("</indexColumnSourceNames>")) tIndexColumnSourceNames = content;
-      else if (localTags.equals("<maxRequestFraction>")) {
-      } else if (localTags.equals("</maxRequestFraction>"))
-        tMaxRequestFraction = String2.parseDouble(content);
-      else if (localTags.equals("<columnNameQuotes>")) {
-      } else if (localTags.equals("</columnNameQuotes>")) tColumnNameQuotes = content;
-      else if (localTags.equals("<partitionKeyCSV>")) {
-      } else if (localTags.equals("</partitionKeyCSV>")) tPartitionKeyCSV = content;
-      else if (localTags.equals("<sourceNeedsExpandedFP_EQ>")) {
-      } else if (localTags.equals("</sourceNeedsExpandedFP_EQ>"))
-        tSourceNeedsExpandedFP_EQ = String2.parseBoolean(content);
-      else if (localTags.equals("<onChange>")) {
-      } else if (localTags.equals("</onChange>")) tOnChange.add(content);
-      else if (localTags.equals("<fgdcFile>")) {
-      } else if (localTags.equals("</fgdcFile>")) tFgdcFile = content;
-      else if (localTags.equals("<iso19115File>")) {
-      } else if (localTags.equals("</iso19115File>")) tIso19115File = content;
-      else if (localTags.equals("<sosOfferingPrefix>")) {
-      } else if (localTags.equals("</sosOfferingPrefix>")) tSosOfferingPrefix = content;
-      else if (localTags.equals("<defaultDataQuery>")) {
-      } else if (localTags.equals("</defaultDataQuery>")) tDefaultDataQuery = content;
-      else if (localTags.equals("<defaultGraphQuery>")) {
-      } else if (localTags.equals("</defaultGraphQuery>")) tDefaultGraphQuery = content;
-      else if (localTags.equals("<addVariablesWhere>")) {
-      } else if (localTags.equals("</addVariablesWhere>")) tAddVariablesWhere = content;
-      else xmlReader.unexpectedTagException();
+      switch (localTags) {
+        case "<addAttributes>" -> tGlobalAttributes = getAttributesFromXml(xmlReader);
+        case "<dataVariable>" -> tDataVariables.add(getSDADVariableFromXml(xmlReader));
+        case "<accessibleTo>" -> {}
+        case "</accessibleTo>" -> tAccessibleTo = content;
+        case "<graphsAccessibleTo>" -> {}
+        case "</graphsAccessibleTo>" -> tGraphsAccessibleTo = content;
+        case "<reloadEveryNMinutes>" -> {}
+        case "</reloadEveryNMinutes>" -> tReloadEveryNMinutes = String2.parseInt(content);
+        case "<sourceUrl>" -> {}
+        case "</sourceUrl>" -> tLocalSourceUrl = content;
+        case "<connectionProperty>" -> tConnectionProperties.add(xmlReader.attributeValue("name"));
+        case "</connectionProperty>" -> tConnectionProperties.add(content);
+        case "<keyspace>" -> {}
+        case "</keyspace>" -> tKeyspace = content;
+        case "<tableName>" -> {}
+        case "</tableName>" -> tTableName = content;
+        case "<partitionKeySourceNames>" -> {}
+        case "</partitionKeySourceNames>" -> tPartitionKeySourceNames = content;
+        case "<clusterColumnSourceNames>" -> {}
+        case "</clusterColumnSourceNames>" -> tClusterColumnSourceNames = content;
+        case "<indexColumnSourceNames>" -> {}
+        case "</indexColumnSourceNames>" -> tIndexColumnSourceNames = content;
+        case "<maxRequestFraction>" -> {}
+        case "</maxRequestFraction>" -> tMaxRequestFraction = String2.parseDouble(content);
+        case "<columnNameQuotes>" -> {}
+        case "</columnNameQuotes>" -> tColumnNameQuotes = content;
+        case "<partitionKeyCSV>" -> {}
+        case "</partitionKeyCSV>" -> tPartitionKeyCSV = content;
+        case "<sourceNeedsExpandedFP_EQ>" -> {}
+        case "</sourceNeedsExpandedFP_EQ>" ->
+            tSourceNeedsExpandedFP_EQ = String2.parseBoolean(content);
+        case "<onChange>" -> {}
+        case "</onChange>" -> tOnChange.add(content);
+        case "<fgdcFile>" -> {}
+        case "</fgdcFile>" -> tFgdcFile = content;
+        case "<iso19115File>" -> {}
+        case "</iso19115File>" -> tIso19115File = content;
+        case "<sosOfferingPrefix>" -> {}
+        case "</sosOfferingPrefix>" -> tSosOfferingPrefix = content;
+        case "<defaultDataQuery>" -> {}
+        case "</defaultDataQuery>" -> tDefaultDataQuery = content;
+        case "<defaultGraphQuery>" -> {}
+        case "</defaultGraphQuery>" -> tDefaultGraphQuery = content;
+        case "<addVariablesWhere>" -> {}
+        case "</addVariablesWhere>" -> tAddVariablesWhere = content;
+        default -> xmlReader.unexpectedTagException();
+      }
     }
     int ndv = tDataVariables.size();
     Object ttDataVariables[][] = new Object[ndv][];
@@ -1618,13 +1614,11 @@ public class EDDTableFromCassandra extends EDDTable {
     //  and improve performance by prefetching results.
     // see
     // https://docs.datastax.com/en/drivers/java/3.0/com/datastax/driver/core/ResultSet.html#one--
-    Iterator<Row> iter = rs.iterator();
-    while (iter.hasNext()) {
+    for (Row r : rs) {
       if (rs.getAvailableWithoutFetching() == 100 && !rs.isFullyFetched()) {
         @SuppressWarnings("unused")
         ListenableFuture<ResultSet> unused = rs.fetchMoreResults();
       }
-      Row row = iter.next();
 
       stats[1]++;
       int listSizeDVI = -1;
@@ -1633,7 +1627,7 @@ public class EDDTableFromCassandra extends EDDTable {
         int rsCol = rvToRsCol[rv];
         EDV edv = rvToResultsEDV[rv];
         PrimitiveArray pa = paArray[rv];
-        if (rsCol == -1 || row.isNull(rsCol)) { // not in resultSet or isNull
+        if (rsCol == -1 || r.isNull(rsCol)) { // not in resultSet or isNull
           pa.addString("");
           maxNRows = Math.max(maxNRows, pa.size());
           continue;
@@ -1642,32 +1636,32 @@ public class EDDTableFromCassandra extends EDDTable {
         if (isListDV[resultsDVI[rv]]) {
           int tListSize = -1;
           if (edv.isBoolean()) { // special case
-            List<Boolean> list = row.getList(rsCol, Boolean.class);
+            List<Boolean> list = r.getList(rsCol, Boolean.class);
             tListSize = list.size();
             for (int i = 0; i < tListSize; i++) pa.addInt(list.get(i) ? 1 : 0);
           } else if (edv instanceof EDVTimeStamp) { // zulu millis -> epoch seconds
-            List<Date> list = row.getList(rsCol, Date.class);
+            List<Date> list = r.getList(rsCol, Date.class);
             tListSize = list.size();
             for (int i = 0; i < tListSize; i++) pa.addDouble(list.get(i).getTime() / 1000.0);
           } else if (tPAType == PAType.STRING) {
             // This doesn't support lists of maps/sets/lists.
-            List<String> list = row.getList(rsCol, String.class);
+            List<String> list = r.getList(rsCol, String.class);
             tListSize = list.size();
             for (int i = 0; i < tListSize; i++) pa.addString(list.get(i));
           } else if (tPAType == PAType.DOUBLE) {
-            List<Double> list = row.getList(rsCol, Double.class);
+            List<Double> list = r.getList(rsCol, Double.class);
             tListSize = list.size();
             for (int i = 0; i < tListSize; i++) pa.addDouble(list.get(i));
           } else if (tPAType == PAType.FLOAT) {
-            List<Float> list = row.getList(rsCol, Float.class);
+            List<Float> list = r.getList(rsCol, Float.class);
             tListSize = list.size();
             for (int i = 0; i < tListSize; i++) pa.addFloat(list.get(i));
           } else if (tPAType == PAType.LONG) {
-            List<Long> list = row.getList(rsCol, Long.class);
+            List<Long> list = r.getList(rsCol, Long.class);
             tListSize = list.size();
             for (int i = 0; i < tListSize; i++) pa.addLong(list.get(i));
           } else if (tPAType == PAType.INT || tPAType == PAType.SHORT || tPAType == PAType.BYTE) {
-            List<Integer> list = row.getList(rsCol, Integer.class);
+            List<Integer> list = r.getList(rsCol, Integer.class);
             tListSize = list.size();
             for (int i = 0; i < tListSize; i++) pa.addInt(list.get(i));
           } else { // PAType.UINT, PAType.USHORT, PAType.UBYTE
@@ -1681,7 +1675,7 @@ public class EDDTableFromCassandra extends EDDTable {
             listSizeDVI = resultsDVI[rv];
             listSize = tListSize;
           } else if (listSize != tListSize) {
-            String2.log("This resultSet row has different list sizes=\n" + row.toString());
+            String2.log("This resultSet row has different list sizes=\n" + r.toString());
             throw new RuntimeException(
                 "Source data error: on one row, "
                     + "two list variables have lists of different sizes ("
@@ -1696,9 +1690,9 @@ public class EDDTableFromCassandra extends EDDTable {
           }
         } else {
           if (edv.isBoolean()) { // special case
-            pa.addInt(row.getBool(rsCol) ? 1 : 0);
+            pa.addInt(r.getBool(rsCol) ? 1 : 0);
           } else if (edv instanceof EDVTimeStamp) { // zulu millis -> epoch seconds
-            pa.addDouble(row.getTimestamp(rsCol).getTime() / 1000.0);
+            pa.addDouble(r.getTimestamp(rsCol).getTime() / 1000.0);
           } else if (tPAType == PAType.STRING) {
             // v2: getString doesn't return the String form of any type
             // https://datastax-oss.atlassian.net/browse/JAVA-135
@@ -1712,7 +1706,7 @@ public class EDDTableFromCassandra extends EDDTable {
             try {
               TypeCodec codec = rvToTypeCodec[rv];
               if (codec != null) {
-                java.nio.ByteBuffer bytes = row.getBytesUnsafe(rsCol);
+                java.nio.ByteBuffer bytes = r.getBytesUnsafe(rsCol);
                 s = bytes == null ? "" : codec.deserialize(bytes, protocolVersion).toString();
               }
 
@@ -1724,13 +1718,13 @@ public class EDDTableFromCassandra extends EDDTable {
             }
             pa.addString(s);
           } else if (tPAType == PAType.DOUBLE) {
-            pa.addDouble(row.getDouble(rsCol));
+            pa.addDouble(r.getDouble(rsCol));
           } else if (tPAType == PAType.FLOAT) {
-            pa.addFloat(row.getFloat(rsCol));
+            pa.addFloat(r.getFloat(rsCol));
           } else if (tPAType == PAType.LONG) {
-            pa.addLong(row.getLong(rsCol));
+            pa.addLong(r.getLong(rsCol));
           } else if (tPAType == PAType.INT || tPAType == PAType.SHORT || tPAType == PAType.BYTE) {
-            pa.addInt(row.getInt(rsCol));
+            pa.addInt(r.getInt(rsCol));
           } else { // PAType.UINT, PAType.USHORT, PAType.UBYTE
             // I think C* doesn't support unsigned data types,
             // so no variable in ERDDAP should be an unsigned type
@@ -1892,15 +1886,15 @@ public class EDDTableFromCassandra extends EDDTable {
     StringArray partitionKeySA = new StringArray(); // sourceNames
     StringArray subsetVariablesSourceNameSA = new StringArray();
     List<ColumnMetadata> pk = tm.getPartitionKey();
-    for (int i = 0; i < pk.size(); i++) {
-      partitionKeySA.add(pk.get(i).getName());
-      subsetVariablesSourceNameSA.add(pk.get(i).getName());
+    for (ColumnMetadata metadata : pk) {
+      partitionKeySA.add(metadata.getName());
+      subsetVariablesSourceNameSA.add(metadata.getName());
     }
 
     // clusterColumn and indexColumn (could be accumulated as a Set)
     StringArray clusterColumnSA = new StringArray(); // sourceNames
     List<ColumnMetadata> cc = tm.getClusteringColumns();
-    for (int i = 0; i < cc.size(); i++) clusterColumnSA.add(cc.get(i).getName());
+    for (ColumnMetadata columnMetadata : cc) clusterColumnSA.add(columnMetadata.getName());
 
     Table dataSourceTable = new Table();
     Table dataAddTable = new Table();
@@ -1940,7 +1934,7 @@ public class EDDTableFromCassandra extends EDDTable {
       isList[col] = cassType.getName() == DataType.Name.LIST;
       // String2.log(sourceName + " isList=" + isList[col] + " javaClass=" +
       // cassType.asJavaClass());
-      if (isList[col]) cassType = cassType.getTypeArguments().get(0); // the element type
+      if (isList[col]) cassType = cassType.getTypeArguments().getFirst(); // the element type
 
       Attributes sourceAtts = new Attributes();
       Attributes addAtts = new Attributes();
@@ -1961,10 +1955,12 @@ public class EDDTableFromCassandra extends EDDTable {
       PrimitiveArray destPA = makeDestPAForGDX(sourcePA, sourceAtts);
 
       // lie, to trigger catching LLAT
-      if (destName.equals(EDV.LON_NAME)) sourceAtts.add("units", EDV.LON_UNITS);
-      else if (destName.equals(EDV.LAT_NAME)) sourceAtts.add("units", EDV.LAT_UNITS);
-      else if (destName.equals(EDV.ALT_NAME)) sourceAtts.add("units", EDV.ALT_UNITS);
-      else if (destName.equals(EDV.DEPTH_NAME)) sourceAtts.add("units", EDV.DEPTH_UNITS);
+      switch (destName) {
+        case EDV.LON_NAME -> sourceAtts.add("units", EDV.LON_UNITS);
+        case EDV.LAT_NAME -> sourceAtts.add("units", EDV.LAT_UNITS);
+        case EDV.ALT_NAME -> sourceAtts.add("units", EDV.ALT_UNITS);
+        case EDV.DEPTH_NAME -> sourceAtts.add("units", EDV.DEPTH_UNITS);
+      }
       addAtts =
           makeReadyToUseAddVariableAttributesForDatasetsXml(
               null, // no source global attributes
@@ -1976,18 +1972,23 @@ public class EDDTableFromCassandra extends EDDTable {
               true); // tryToFindLLAT
 
       // but make it real here, and undo the lie
-      if (destName.equals(EDV.LON_NAME)) {
-        addAtts.add("units", EDV.LON_UNITS);
-        sourceAtts.remove("units");
-      } else if (destName.equals(EDV.LAT_NAME)) {
-        addAtts.add("units", EDV.LAT_UNITS);
-        sourceAtts.remove("units");
-      } else if (destName.equals(EDV.ALT_NAME)) {
-        addAtts.add("units", EDV.ALT_UNITS);
-        sourceAtts.remove("units");
-      } else if (destName.equals(EDV.DEPTH_NAME)) {
-        addAtts.add("units", EDV.DEPTH_UNITS);
-        sourceAtts.remove("units");
+      switch (destName) {
+        case EDV.LON_NAME -> {
+          addAtts.add("units", EDV.LON_UNITS);
+          sourceAtts.remove("units");
+        }
+        case EDV.LAT_NAME -> {
+          addAtts.add("units", EDV.LAT_UNITS);
+          sourceAtts.remove("units");
+        }
+        case EDV.ALT_NAME -> {
+          addAtts.add("units", EDV.ALT_UNITS);
+          sourceAtts.remove("units");
+        }
+        case EDV.DEPTH_NAME -> {
+          addAtts.add("units", EDV.DEPTH_UNITS);
+          sourceAtts.remove("units");
+        }
       }
       // time units already done above for all timestamp vars
 
@@ -2098,7 +2099,10 @@ public class EDDTableFromCassandra extends EDDTable {
     // last 2 params: includeDataType, questionDestinationName
     sb.append(
         writeVariablesForDatasetsXml(dataSourceTable, dataAddTable, "dataVariable", true, false));
-    sb.append("</dataset>\n" + "\n");
+    sb.append("""
+            </dataset>
+
+            """);
 
     // convert boolean var dataType from byte to boolean
     String2.replaceAll(sb, "<dataType>byte", "<dataType>boolean");
